# quantai

./: .coverage  .env.example  .gitignore  .gitmodules  AUDIT_REPORT.md  AUDIT_REPORT_FINAL.md  GUIDE_STRATEGIES.md  HANDOFF.md  README.md  pyproject.toml
.github/workflows/: ci.yml
data/: __init__.py  client.py
execution/: __init__.py  decision_agent.py  decision_logic.py  risk.py  router.py
research/: 01_momentum_factor.ipynb
research/results/: momentum_backtest_results.json
scripts/: audit_test.py  check_openbb.py  diagnose.py  run_pipeline.py  test_mirofish.py  test_queries.py  test_real_1.py
signals/: aggregator.py
signals/agents/: quantagent_adapter.py  quantmuse_adapter.py
signals/agents/quantagent/: agent_state.py  decision_agent.py  decision_journal.py  execution_exit.py  github_agent.py  graph_setup.py  graph_util.py  indicator_agent.py  regime_risk_calibrator.py  static_util.py  trading_graph.py  web_interface.py
signals/agents/quantagent/tests/: test_minimax_integration.py  test_minimax_provider.py
signals/factors/: base.py  momentum.py  risk_metrics.py  value_quality_vol.py
simulation/: __init__.py  mirofish_client.py
tests/: test_data.py  test_decision_agent.py  test_decision_logic.py  test_mirofish_client.py  test_quantagent_adapter.py  test_quantagent_integration.py  test_quantmuse_adapter.py  test_risk.py  test_risk_metrics.py  test_router.py  test_signals.py
